alignment issue of refresh-icon in team member

--- a/src/app/util/team-members-util/team-members-util.component.css
+++ b/src/app/util/team-members-util/team-members-util.component.css
@@ -297,7 +297,7 @@ hr {
 }
 
 .tmutttpx {
-  width: 220px !important;
+  width: 183px !important;
 }
 
 .tmu-refresh-padding {
